# minigrep

./: .gitignore  Cargo.toml  LICENSE  README.md  app.rc  app_icon.res  build.rs
.cargo/: config.toml
src/: lib.rs  main.rs  text.rs
